<resources>
    <string name="app_name">Pear</string>
    <string name="welcome_header">Welcome to Pear</string>
    <string name="interests_header">What do you love?</string>
    <string name="almost_there">Almost there</string>
    <string name="groups_header">What are you a part of?</string>
    <string name="groups_search_query_hint">Search</string>
    <string name="ready_for_pear">Ready for Pear</string>
    <string name="go_back">Go back</string>
    <string name="demographics_header">"Hi %1$s!\nLet's get to know you better."</string>
    <string name="demographics_header_no_name">"Hi!\nLet's get to know you better."</string>
    <string name="goals_header">How do you want to use Pear?</string>
    <string name="talking_pointers_header">What do you most want to talk about?</string>
    <string name="add_later_button">I\'ll add later</string>
    <string name="upload_image">Upload New Picture</string>
    <string name="name">Name</string>
    <string name="major">Major</string>
    <string name="hometown">Hometown</string>
    <string name="pronouns">Pronouns</string>
    <string name="grad_student">Grad Student</string>
    <string-array name="interest_titles">
        <item>Art</item>
        <item>Business</item>
        <item>Dance</item>
        <item>Design</item>
        <item>Fashion</item>
        <item>Fitness &amp; Sports</item>
        <item>Food</item>
        <item>Humanities</item>
        <item>Music</item>
        <item>Photography</item>
        <item>Reading</item>
        <item>Sustainability</item>
        <item>Tech</item>
        <item>Travel</item>
        <item>TV &amp; Film</item>
    </string-array>
    <string-array name="interest_subtitles">
        <item>painting, crafts, embroidery</item>
        <item>entrepreneurship, finance, VC</item>
        <item>urban, hip hop, ballet, swing</item>
        <item>UX/UI, graphic, print</item>
        <item>fashion</item>
        <item>working out, outdoors, basketball</item>
        <item>cooking, eating, baking</item>
        <item>history, politics</item>
        <item>instruments, producing, acapella</item>
        <item>digital, analog</item>
        <item>reading</item>
        <item>sustainability</item>
        <item>programming, web/app development</item>
        <item>road, trips, backpacking</item>
    </string-array>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="prompts_header">Let\'s get to know you better!</string>
    <string name="select_prompt">Select a prompt</string>
    <string name="enter_response">Enter your response</string>
    <string-array name="prompts">
        <item>Why are you on Pear?</item>
        <item>Why should other students reach out to you?</item>
        <item>How would you introduce yourself to someone new?</item>
        <item>What do you like most about your major?</item>
        <item>What do you hope to accomplish this semester?</item>
        <item>What could you talk about for hours?</item>
        <item>What\'s a funny story with no context?</item>
        <item>What are your most recent 5 emojis?</item>
        <item>What\'s your favorite food (besides pears)?</item>
        <item>What are your go-to songs?</item>
        <item>What are 3 things on your bucket list?</item>
        <item>What\'s something you want to do before you graduate?</item>
        <item>Last book you read that you loved?</item>
        <item>The last tv show series you watched?</item>
        <item>When you were younger what did you want to be?</item>
        <item>What is something about you that you take pride in?</item>
        <item>What is a social cause that you care about?</item>
        <item>If you could go anywhere in the world, where would you go?</item>
        <item>Where do you spend time on campus?</item>
        <item>What is your favorite restaurant?</item>
        <item>What is something you want to learn?</item>
        <item>What is a fact about you that surprises people?</item>
        <item>What is your ideal day?</item>
    </string-array>
    <string-array name="goal_titles">
        <item>Just chatting</item>
        <item>Finding my people</item>
        <item>Meeting someone different</item>
        <item>Learning from mentors</item>
        <item>Guiding mentees</item>
        <item>Not sure yet</item>
    </string-array>
    <string name="social_media">Social Media</string>
    <string name="social_media_header">Connect your social media</string>
    <string name="social_media_blurb">Help your Pear contact you by connecting your social media accounts. Your information will only be shared with the verified Cornell students you are paired with.</string>
    <string name="instagram_handle">\@Instagram handle</string>
    <string name="facebook_profile">Facebook profile link</string>
    <string name="no_match_to_message">
        No pears to message right now.\nIn the meantime, browse the people\npage to see who else is on the app!
    </string>
    <string name="send_message">\tSend a Message</string>
    <string name="send_message_hint">Say hi</string>
    <string name="messages_header">Messages</string>
    <string name="messages_subheader">Keep in touch with each other : )</string>
    <string name="chat_header">Chat with %1$s</string>
    <string name="long_string">This is a very, very, very, very, very long string. It contains n characters for a somewhat large n.</string>
    <string name="dummy_date">Aug 25, 2021</string>
    <string name="current_pear">Current Pear</string>
    <string name="default_week_stamp">1 Week ago</string>
    <string name="week_stamp">%1$d Weeks ago</string>
    <string name="message_send_error">Message failed to send</string>
    <string name="notification_title">You Received a Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="basic_profile_info">I study &lt;b>%1$s&lt;/b> in the class of &lt;b>%2$s&lt;/b>, and my home is in &lt;b>%3$s&lt;/b>! My pronouns are &lt;b>%4$s&lt;/b>.</string>
    <string name="dummy_name">First Last</string>
    <string name="people_header">People</string>
    <string name="user_info">%1$s · %2$s · %3$s</string>
    <string name="scheduling_time_header">When are you free?</string>
    <string name="next">Next</string>
    <string-array name="days_abbr">
        <item>Su</item>
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
    </string-array>
    <string-array name="days_full_name">
        <item>sunday</item>
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday</item>
        <item>friday</item>
        <item>saturday</item>
    </string-array>
    <string-array name="times">
        <item>9:00</item>
        <item>1:00</item>
        <item>5:00</item>
        <item>9:30</item>
        <item>1:30</item>
        <item>5:30</item>
        <item>10:00</item>
        <item>2:00</item>
        <item>6:00</item>
        <item>10:30</item>
        <item>2:30</item>
        <item>6:30</item>
        <item>11:00</item>
        <item>3:00</item>
        <item>7:00</item>
        <item>11:30</item>
        <item>3:30</item>
        <item>7:30</item>
        <item>12:00</item>
        <item>4:00</item>
        <item>8:00</item>
        <item>12:30</item>
        <item>4:30</item>
        <item>8:30</item>
    </string-array>
    <string name="day_header">Every %1$s</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="scheduling_time_button">Next</string>
    <string name="scheduling_place_header">Where do you prefer?</string>
    <string name="scheduling_place_subtitle">pick three</string>
    <string-array name="campus_locations">
        <item>Atrium Café</item>
        <item>Café Jennie</item>
        <item>Gimme Coffee</item>
        <item>Goldie\'s Café</item>
        <item>Green Dragon</item>
        <item>Libe Café</item>
        <item>Mac\'s Café</item>
        <item>Martha\'s Café</item>
        <item>Mattin\'s Café</item>
        <item>Temple of Zeus</item>
    </string-array>
    <string-array name="collegetown_locations">
        <item>Kung Fu Tea</item>
        <item>Starbucks</item>
        <item>CTB</item>
        <item>U Tea</item>
    </string-array>
    <string name="scheduling_place_button">Finish</string>
    <string name="campus">Campus</string>
    <string name="collegetown">Collegetown</string>
    <string name="match_header">Weekly Pear</string>
    <string name="match_loves">You both love…</string>
    <string name="match_shared_clubs">You\'re both part of…</string>
    <string name="match_enjoys">%1$s also enjoys…</string>
    <string name="match_clubs">%1$s is also part of…</string>
    <string name="match_reach_out">Reach Out!</string>
    <string name="profile_basic_info_header">The basics</string>
    <string name="profile_interests_header">Things I love</string>
    <string name="profile_groups_header">Groups I\'m a part of</string>
    <string name="no_match_header">Meet your new Pear next Sunday</string>
    <string name="no_match_subheader">
        In the meantime, browse the people
        page to see who else is on the app!
    </string>
    <string name="no_match_availability">Enter Availability</string>
    <string name="edit_info">Edit Info</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="user_hometown">From %1$s</string>
    <string name="user_major_year">%1$s %2$s</string>
    <string name="menu_profile">Your profile</string>
    <string name="menu_groups">Your groups</string>
    <string name="menu_interests">Your interests</string>
    <string name="menu_prompts">Your prompts</string>
    <string name="menu_messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer menu</string>
    <string name="drawer_close">Close navigation drawer menu</string>
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_contact">Contact us</string>
    <string name="feedback_report">Report user</string>
    <string name="feedback_url">https://docs.google.com/forms/d/e/1FAIpQLSf49KRJQwugXqESmeRlZ8T6dSPHiZl-3BRA60WaOpMhmOjSeQ/viewform</string>
    <string name="feedback_email">team@cornellappdev.com</string>
    <string name="contact_email_subject">Pear Feedback</string>
    <string name="report_email_subject">Report user</string>
    <string name="save">Save</string>
    <string name="edit_availabilities">Edit Availabilities</string>
    <string name="edit_location">Edit Location Preferences</string>
    <string name="connect_social_media">Connect Social Media</string>
    <string name="about_pear">About Pear</string>
    <string name="log_out">Log Out</string>
    <string name="pause_pear">Pause Pear</string>
    <string name="deselect">tap to deselect</string>
    <string name="more_items">More %1$s</string>
    <string name="tap_to_add">tap to add</string>
    <string name="pear_creation_reason">Pear was created to help Cornell students meet new people and form meaningful connections.</string>
    <string name="get_paired"><b>Get paired</b> up with a new Cornell student like you, every week.</string>
    <string name="reach_out"><b>Reach out</b> by sending over when and where you prefer, or choose from what your pair suggested.</string>
    <string name="meet_at"><b>Meet at</b> the chosen time and place, and now you have one new friend at Cornell!</string>
    <string name="pause_pairings">You can pause pairings at any time in Settings.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="visit_website">Visit our website</string>
    <string name="more_apps">More apps</string>
</resources>