<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_interests"
            android:icon="@drawable/ic_interests_icon"
            android:title="@string/menu_interests" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups_icon"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_prompts"
            android:icon="@drawable/ic_prompts_icon"
            android:title="@string/menu_prompts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/settings" />
    </group>
</menu>