<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".AboutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circular_book"
        android:gravity="center_horizontal"
        android:text="@string/pear_creation_reason"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circular_book"
        android:text="@string/get_paired"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/circular_book"
        android:text="@string/reach_out"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/circular_book"
        android:text="@string/meet_at"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/circular_book"
        android:text="@string/pause_pairings"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:background="@drawable/unselected_rounded_time_option"
        android:elevation="3dp"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/send_feedback"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/visit_website"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/unselected_rounded_time_option"
        android:elevation="3dp"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/visit_website"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/more_apps"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/unselected_rounded_time_option"
        android:elevation="3dp"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/more_apps"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>