<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@mipmap/ic_launcher_round" />

        <Button
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:background="@drawable/rounded_shape_white"
            android:fontFamily="@font/circular_medium"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/upload_image"
            android:textAllCaps="false"
            android:textColor="@color/accent_orange"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/user_image"
            app:layout_constraintStart_toStartOf="@id/user_image"
            app:layout_constraintTop_toTopOf="@id/user_image" />

        <Spinner
            android:id="@+id/classSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_edittext"
            android:popupBackground="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image" />

        <AutoCompleteTextView
            android:id="@+id/majorACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/circular_book"
            android:hint="@string/major"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/faded_text"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classSpinner" />

        <EditText
            android:id="@+id/hometownEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/circular_book"
            android:hint="@string/hometown"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/faded_text"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/majorACTV" />

        <Spinner
            android:id="@+id/pronounSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_edittext"
            android:popupBackground="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hometownEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>